--- a/test/Makefile
+++ b/test/Makefile
@@ -1,15 +1,25 @@
 # Copyright (c) 2012 Rich Porter - see LICENSE for further details
 
+include make.inc
+
 VERILOG=../verilog
 
-.PHONY : all test clean
+.PHONY : build verilog iverilog verilate cver clean
 
-test : all
+iverilog : iverilog-build
+	$(IRUN) -m ../c/libexm_vpi.so example.iverilog +python+$(VERILOG)/example.py +timeout+3000
+
+iverilog-build : build
+	$(IBUILD) -g2005-sv -I$(VERILOG) $(VERILOG)/example.v -o example.iverilog
+
+verilate : verilog
 	$(VERILOG)/example/examplex +python+$(VERILOG)/example.py +timeout+3000
 
-all :
+build :
 	$(MAKE) -C ../c
 	$(MAKE) -C ../python
+
+verilog : build
 	$(MAKE) -C ../verilog
 
 clean :
