--- a/c/Makefile
+++ b/c/Makefile
@@ -4,14 +4,13 @@ include ../test/make.inc
 
 CFLAGS+=-fPIC
 PY_LDFLAGS=$(shell python-config --libs)
-IV_LDFLAGS=-L$(IVERILOG_ROOT)/lib -lvpi -lveriuser
 
 .PHONY : all clean
 
 all : libexm_vpi.so
 
 libexm_vpi.so : exm_python.o exm_vpi.o
-	$(CXX) -export-dynamic -shared $^ -o $@ $(PY_LDFLAGS) $(IV_LDFLAGS)
+	$(CXX) -export-dynamic -shared $^ -o $@ $(PY_LDFLAGS)
 
 exm_python.o : exm_python.c exm_python.h
 	$(CXX) $(CFLAGS) $(PY_CFLAGS) $(VL_CFLAGS) -DPYTHONDIR=\"$$PWD/../python\" -c $< -o $@
