--- a/verilog/Makefile_obj
+++ b/verilog/Makefile_obj
@@ -10,7 +10,7 @@ include Vexample.mk
 examplex: example.o $(VK_GLOBAL_OBJS) $(VM_PREFIX)__ALL.a
 	$(LINK) $(LDFLAGS) -g $^ $(LDLIBS) $(LOADLIBES) -o $@ $(LIBS) 2>&1 | c++filt
 
-example.o: example.cpp $(VM_PREFIX).h
+example.o: example.cpp $(VM_PREFIX).h $(VERILATOR_ROOT)/include/verilated_vpi.h $(VERILATOR_ROOT)/include/verilated_vpi.cpp
 
 ../../c/libexm_vpi.so :
 	$(MAKE) -C ../../c
