--- a/verilog/Makefile_obj
+++ b/verilog/Makefile_obj
@@ -6,6 +6,7 @@ LDFLAGS+=-Wl,-export-dynamic,-rpath=$$PWD/../../c
 default : ../../c/libexm_vpi.so examplex ../../python/vpi
 
 include Vexample.mk
+CXXFLAGS+=-DVM_PREFIX=$(VM_PREFIX)
 
 examplex: example.o $(VK_GLOBAL_OBJS) $(VM_PREFIX)__ALL.a
 	$(LINK) $(LDFLAGS) -g $^ $(LDLIBS) $(LOADLIBES) -o $@ $(LIBS) 2>&1 | c++filt
