--- a/verilog/Makefile_obj
+++ b/verilog/Makefile_obj
@@ -8,7 +8,7 @@ default : ../../c/libexm_vpi.so examplex ../../python/vpi
 include Vexample.mk
 CXXFLAGS+=-DVM_PREFIX=$(VM_PREFIX) -DVL_USER_FATAL -DVL_USER_STOP -DVL_USER_FINISH
 
-examplex: example.o exm_verilated.o $(VK_GLOBAL_OBJS) $(VM_PREFIX)__ALL.a
+examplex: example.o $(VK_GLOBAL_OBJS) $(VM_PREFIX)__ALL.a
 	$(LINK) $(LDFLAGS) -g $^ $(LDLIBS) $(LOADLIBES) -o $@ $(LIBS) 2>&1 | c++filt
 
 example.o: example.cpp $(VM_PREFIX).h $(VERILATOR_ROOT)/include/verilated_vpi.h $(VERILATOR_ROOT)/include/verilated_vpi.cpp
