--- a/c/Makefile
+++ b/c/Makefile
@@ -9,13 +9,16 @@ PY_LDFLAGS=$(shell python-config --libs)
 
 all : libexm_vpi.so
 
-libexm_vpi.so : exm_python.o exm_vpi.o exm_dpi.o message.o
+libexm_vpi.so : exm_python.o exm_vpi.o exm_dpi.o message.o exm_verilated.o
 	$(CXX) -export-dynamic -shared $^ -o $@ $(PY_LDFLAGS)
 
 exm_python.o : exm_python.c exm_python.h
 	$(CXX) $(CFLAGS) $(PY_CFLAGS) $(VL_CFLAGS) -DPYTHONDIR=\"$$PWD/../python\" -c $< -o $@
 
 exm_%pi.o : exm_%pi.c
+	$(CXX) $(CFLAGS) $(VL_CFLAGS) -c $< -o $@
+
+exm_verilated.o : exm_verilated.cpp
 	$(CXX) $(CFLAGS) $(VL_CFLAGS) -c $< -o $@
 
 message.o : message.cpp message.h
