get local copy of dynatree

--- a/www/static/.gitignore
+++ b/www/static/.gitignore
@@ -1,3 +1,9 @@
 jquery.jqote2.js
 jquery.dataTables.js
-
+icons-rtl.gif
+icons.gif
+jquery.dynatree.js
+loading.gif
+ui.dynatree.css
+vline-rtl.gif
+vline.gif
