add skew tests; add graph option for single axis coverpoints

--- a/www/static/.gitignore
+++ b/www/static/.gitignore
@@ -8,3 +8,6 @@ loading.gif
 ui.dynatree.css
 vline-rtl.gif
 vline.gif
+jqplot.categoryAxisRenderer.min.js
+jquery.jqplot.min.css
+jquery.jqplot.min.js
