add regress make target to build source

--- a/test/Makefile
+++ b/test/Makefile
@@ -25,6 +25,9 @@ verilator verilate : verilog
 ../c/% :
 	$(MAKE) -C ../c $(notdir $@)
 
+regress : all
+       ./regress
+
 build :
 	$(MAKE) -C ../c
 	$(MAKE) -C ../db
